--- a/Trivia/Application/Categories/CategoriesViewController.xib
+++ b/Trivia/Application/Categories/CategoriesViewController.xib
@@ -8,8 +8,9 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MainViewController" customModule="Trivia" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CategoriesViewController" customModule="Trivia" customModuleProvider="target">
             <connections>
+                <outlet property="tableView" destination="pk9-ZV-FIU" id="CPb-Kg-pe0"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -17,9 +18,21 @@
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="pk9-ZV-FIU">
+                    <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                </tableView>
+            </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-            <point key="canvasLocation" x="35" y="104"/>
+            <constraints>
+                <constraint firstItem="pk9-ZV-FIU" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="1Qz-Sv-FfD"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="pk9-ZV-FIU" secondAttribute="trailing" id="Wom-Xk-69p"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="pk9-ZV-FIU" secondAttribute="bottom" id="YKi-HB-hBR"/>
+                <constraint firstItem="pk9-ZV-FIU" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="qxg-Sd-9V0"/>
+            </constraints>
+            <point key="canvasLocation" x="35" y="72"/>
         </view>
     </objects>
     <resources>
