--- a/Trivia/Application/Information/InformationViewController.xib
+++ b/Trivia/Application/Information/InformationViewController.xib
@@ -114,13 +114,13 @@
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VYn-IS-SmQ">
                                             <rect key="frame" x="20" y="20" width="374" height="913"/>
-                                            <mutableString key="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur risus justo, ultrices sagittis eros a, porttitor fermentum turpis. Pellentesque ornare vel metus auctor sodales. Phasellus a neque nulla. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Donec lobortis lorem vel tortor tincidunt luctus. Curabitur rutrum feugiat dolor quis ullamcorper. Sed tempus gravida justo vitae malesuada. Duis egestas magna et nunc viverra, in dictum augue tempus.
+                                            <string key="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur risus justo, ultrices sagittis eros a, porttitor fermentum turpis. Pellentesque ornare vel metus auctor sodales. Phasellus a neque nulla. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Donec lobortis lorem vel tortor tincidunt luctus. Curabitur rutrum feugiat dolor quis ullamcorper. Sed tempus gravida justo vitae malesuada. Duis egestas magna et nunc viverra, in dictum augue tempus.
 
 Nam vel semper nisi, eget porta leo. Duis eu rutrum leo, sit amet vestibulum nunc. Phasellus finibus in massa quis mollis. Praesent consequat viverra odio, sed consectetur ante volutpat ac. Nullam bibendum tincidunt augue et pretium. Suspendisse interdum urna nunc, id tristique elit vestibulum eu. Fusce luctus ligula ex, varius tincidunt elit ullamcorper eget. Sed vestibulum sem facilisis nulla rutrum, sed rhoncus metus hendrerit. Duis ultrices dapibus ex, nec dapibus nibh efficitur vel. Curabitur ultrices facilisis felis, id mollis lectus ullamcorper ut. Etiam at elit quis magna malesuada elementum. Donec scelerisque efficitur est. Donec mi justo, blandit at ligula vitae, rutrum efficitur nibh.
 
 In consectetur enim eget convallis volutpat. Vivamus hendrerit lorem a dui dapibus tempus. Nulla in pulvinar lorem. Nam eleifend pulvinar nisi, maximus tristique leo elementum nec. Praesent porttitor purus est, vitae scelerisque metus finibus vel. Nulla viverra risus et lobortis consectetur. Praesent quis magna sit amet leo luctus fringilla. In tortor felis, viverra at velit non, luctus commodo quam. Donec ultrices nibh ut cursus sollicitudin. In commodo neque lacus, id dictum dolor sagittis vel. Donec metus diam, sagittis ut odio a, pellentesque lobortis erat. Praesent luctus tincidunt finibus. Donec eu tempus magna. Donec pharetra libero id justo vestibulum, eget porttitor nunc tempor.
 
-</mutableString>
+</string>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -147,7 +147,7 @@ In consectetur enim eget convallis volutpat. Vivamus hendrerit lorem a dui dapib
                 </scrollView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="wbk-x4-LG4" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="7z1-M7-WHi"/>
                 <constraint firstItem="BPE-xd-xbs" firstAttribute="top" secondItem="wbk-x4-LG4" secondAttribute="bottom" id="ALx-lm-YKu"/>
